<resources>
    <string name="app_name">Cus</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_point_maps">Map</string>
</resources>
