<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="user.com.cus.Fragment.LoginRegister.RegisterFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:paddingTop="30dp"
        android:paddingBottom="60dp"
        android:layout_margin="30dp">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="125dp"
            android:src="@drawable/icon_transparant"
            android:layout_gravity="center_horizontal"/>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:cardCornerRadius="5dp"
            android:layout_marginTop="10dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name"
                android:id="@+id/edt_name"
                android:background="@android:color/white"
                android:paddingLeft="15dp"
                android:inputType="text"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:cardCornerRadius="5dp"
            android:layout_marginTop="10dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:id="@+id/edt_email"
                android:background="@android:color/white"
                android:paddingLeft="15dp"
                android:inputType="textEmailAddress"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:cardCornerRadius="5dp"
            android:layout_marginTop="10dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/phone"
                android:id="@+id/edt_phone"
                android:background="@android:color/white"
                android:paddingLeft="15dp"
                android:inputType="phone"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:cardCornerRadius="5dp"
            android:layout_marginTop="10dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:background="@android:color/white"
                android:id="@+id/edt_password"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:cardCornerRadius="5dp"
            android:layout_marginTop="10dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:background="@android:color/white"
                android:id="@+id/edt_confirm_password"/>
        </android.support.v7.widget.CardView>
        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="5dp"
                android:id="@+id/card_register">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/register"
                    android:id="@+id/btn_register"
                    android:background="@color/yellowButton"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"/>
            </android.support.v7.widget.CardView>
            <ProgressBar
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerInParent="true"
                android:visibility="gone"
                android:id="@+id/progress_register"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already have an account?"
                android:textSize="15sp"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:layout_marginLeft="5dp"
                android:id="@+id/btn_login"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>
