<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    tools:context="user.com.cus.Activity.EditProfileActivity">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ToolBarStyle"
        android:background="@color/blueApp" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/gray"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="30dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp"
                    android:layout_gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@android:color/black"
                        android:textSize="17sp"
                        android:layout_marginTop="10dp"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:paddingLeft="10dp"
                        android:id="@+id/edt_name"
                        android:background="@android:color/white"
                        android:inputType="text"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="@android:color/black"
                        android:textSize="17sp"
                        android:layout_marginTop="10dp"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:paddingLeft="10dp"                        android:id="@+id/edt_email"
                        android:inputType="textEmailAddress"
                        android:background="@android:color/white"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone"
                        android:textColor="@android:color/black"
                        android:textSize="17sp"
                        android:layout_marginTop="10dp"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:paddingLeft="10dp"                       android:id="@+id/edt_phone"
                        android:inputType="phone"
                        android:background="@android:color/white"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Current Password"
                        android:textColor="@android:color/black"
                        android:textSize="17sp"
                        android:layout_marginTop="50dp"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:paddingLeft="10dp"                      android:background="@android:color/white"
                        android:inputType="textPassword"
                        android:id="@+id/edt_current_password"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="New Password"
                        android:textColor="@android:color/black"
                        android:textSize="17sp"
                        android:layout_marginTop="10dp"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:paddingLeft="10dp"                        android:inputType="textPassword"
                        android:id="@+id/edt_password"
                        android:background="@android:color/white"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Confirm Password"
                        android:textColor="@android:color/black"
                        android:textSize="17sp"
                        android:layout_marginTop="10dp"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:paddingLeft="10dp"                     android:inputType="textPassword"
                        android:background="@android:color/white"
                        android:id="@+id/edt_confirm_password"/>
                    <Button
                        android:layout_width="110dp"
                        android:layout_height="35dp"
                        android:layout_gravity="end"
                        android:text="SAVE"
                        android:id="@+id/btn_save"
                        android:layout_marginTop="40dp"
                        android:layout_marginBottom="20dp"
                        android:textColor="@android:color/white"
                        android:background="@color/blueAppSecondary" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
